--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -1,4 +1,6 @@
 \section{Gestione delle risorse e sistemi mobili}
+Questa sezione \textbf{non fa più parte del programma} ma viene mantenuta per completezza.
+
 Le risorse in un sistema distribuito possono essere o concentrate o distribuite.
 L'idea è comunque quella di cercare di offrire un servizio d trasparenza accedene
 do alla risorsa.
