--- a/Sections/QoS.tex
+++ b/Sections/QoS.tex
@@ -1,82 +1,61 @@
-
 \section{Qualità di servizio e nuovi protocolli per Internet}
 Esistono diversi indicatori con cui poter valutare la QoS:
-26
-$\bullet$ Prontezza di risposta: viene indicata dal tempo di risposta, il jitter, o il
-ritardo. Nel caso vi siano più servizi correlati fra di loro, la qualità viene
-associata a più operazioni.
-$\bullet$ La banda, cioè quanti bit/byte al secondo si riescono a trasmettere (dati
-trasmessi con successo)
-$\bullet$ L'affidabilità del sistema
-$\bullet$ Lo throughput, ovvero il numero di servizi che si riescono ad erogare
-nell'unità di tempo.
-Tuttavia, questi non sono gli unici indicatori, e probabilmente non sono neanche
-quelli più interessanti per un utente che volesse pagare per un servizio. Vi sono
-infatti degli altri parametri più qualitativi da considerare, perché requisiti dalu
-l'utente (come la qualità dell'immagine, sincronizzazione audio/video,. . . ): sono
-requisiti non funzionali, legati alla tipologia di servizio! Per poter quindi servire
-un cliente, si deve anche poter interagire con lui, per avere un'idea di quale
-qualità gli possa interessare: ciò però è contro la trasparenza! La negoziazione
-oe
-e l'accordo controllato con il cliente fanno in modo che i servizi moderni non
-risultino trasparenti, proprio perché l'utente può (e spesso deve) specificare delle
-preferenze! Il sistema deve essere dinamico, in grado di reagire all'evoluzione
-delle richieste, in maniera da mantenere la QoS concordata: deve apportare
-delle azioni correttive durante l'esecuzione! In generale, i parametri che un
-utente ritiene fondamentali sono:
-$\bullet$ Importanza
-$\bullet$ La QoS percepita, che dipende dalla tipologia del servizio
-$\bullet$ Il costo da dover sopportare
-$\bullet$ La garanzia di avere degli adeguati supporti per la sicurezza (non ripudio
-del servizio, autenticazione, . . . )
+\begin{itemize}
+ \item Prontezza di risposta: viene indicata dal tempo di risposta, il jitter, o il ritardo. Nel caso vi siano più
+servizi correlati fra di loro, la qualità viene associata a più operazioni.
+ \item La banda, cioè quanti bit/byte al secondo si riescono a trasmettere (dati trasmessi con successo)
+ \item L'affidabilità del sistema
+ \item Lo throughput, ovvero il numero di servizi che si riescono ad erogare nell'unità di tempo.
+\end{itemize}
+Tuttavia, questi non sono gli unici indicatori, e probabilmente non sono neanche quelli più interessanti per un utente
+che volesse pagare per un servizio. Vi sono infatti degli altri parametri più qualitativi da considerare, perché
+requisiti dall'utente (come la qualità dell'immagine, sincronizzazione audio/video...): sono requisiti non funzionali,
+legati alla tipologia di servizio! Per poter quindi servire un cliente, si deve anche poter interagire con lui, per
+avere un'idea di quale qualità gli possa interessare: ciò però è contro la trasparenza! La negoziazione e l'accordo
+controllato con il cliente fanno in modo che i servizi moderni non risultino trasparenti, proprio perché l'utente può
+(e spesso deve) specificare delle preferenze! Il sistema deve essere dinamico, in grado di reagire all'evoluzione
+delle richieste, in maniera da mantenere la QoS concordata: deve apportare delle azioni correttive durante l'esecuzione!
+In generale, i parametri che un utente ritiene fondamentali sono:
+\begin{itemize}
+ \item Importanza
+ \item La QoS percepita, che dipende dalla tipologia del servizio
+ \item Il costo da dover sopportare
+ \item La garanzia di avere degli adeguati supporti per la sicurezza (non ripudio del servizio, autenticazione...)
+\end{itemize}
+
 \subsection{Calcolare la QoS}
-Oltre alla quantità di dati trasmessi con successo (la banda), un altro parametro
-fondamentale da tener da conto è il tempo di latenza: questo consiste nella
-quantità di tempo necessaria per trasmettere un'unità di informazione. Questo
+Oltre alla quantità di dati trasmessi con successo (la banda), un altro parametro fondamentale da tener da conto è il
+tempo di latenza: questo consiste nella quantità di tempo necessaria per trasmettere un'unità di informazione. Questo
 dipende da tre contributi:
-TL = Tpropagazione segnale + Ttrasmissione + Tritardo
-(14)
-Il tempo di trasmissione dipende dalla dimensione del messaggio e dalla banda
-disponibile, mentre il tempo di ritardo dipende dai tempi di accodamento che
-si vengono a vericare. In particolare, è quest'ultimo a tener da conto gli overe
-head presenti nel sistema (spesso è alto, e lo si può ridurre realizzando un buon
-27
-protocollo).
-La qualità di servizio dipende da come si riescono a risolvere i colli di bottiglia
-dell'applicazione, cioè su cosa è orientata (trasmettere tanti dati di dimensioni
-molto limitate? Prevale il tempo di latenza. trasmettere diversi dati di di`
-mensioni elevate? E necessaria una banda suciente). Spesso, si utilizza come
-ulteriore indicatore il prodotto fra la latenza e la banda: riesce infatti a dare
-un'idea del ritardo fra mittente e ricevente, e di quante informazioni sono state
-inviate nel frattempo. Si rappresenta così il numero eettivo di bit trasmessi,
-\i{}
-perché non sarà mai uguale alla banda essendo presente proprio il tempo di
-latenza! Su questi indicatori, una prima possibile strategia molto semplice è
-quella di occupare sempre al massimo le pipe (e quindi la banda), per poter
-garantire i tempi di risposta concordati: tuttavia, si deve tener conto anche
-del tempo di latenza nel far ciò. . . Spesso quindi si incorpora un tempo per il
-buering delle applicazioni.
-Un altro parametro è il jitter, ovvero la variazione della latenza che si presene
-ta in un usso: infatti, non è in realtà costante (sarebbe la situazione ideale. . . ).
-Basti pensare per esempio che nella maggior parte delle comunicazioni vi sono
-degli intermediari a supporto: a seconda del carico di lavoro presente su di loro,
-`
-il tempo di latenza può variare notevolmente! E quindi necessario pensare anche
-a una QoS distribuita fra i vari nodi !
-Lo skew rappresentalo sfasamento fra due flussi, che dovrebbero essere invece
-percepiti come una singola entità dall'utente finale (per esempio, discrepanze
-nella velocità fra audio e video).
-Spesso, in realtà, la QoS è un parametro che è trascurato in fase progeta
-tuale, nonostante sia un obiettivo. Questo perché durante lo sviluppo si hanno
-situazioni con traffico molto limitato. Ciò però non è vero per tutti i servizi
-(ad esempio, video streaming o qualunque altro usso di informazioni continuative): la QoS è fondamentale proprio per
-poter erogare il servizio, per cui i
-problemi della banda e della latenza son fondamentali. Per garantire la QoS, le
-entità devono effettuare una negoziazione per decidere certi parametri (il ritara
-do inziale per assorbire il jitter medio, il massimo ritardo accettabile per non
-dover scartare un pacchetto. . . ). Per esempio, una prima idea per ottimizzare
-la trasmissione è quella di introdurre delle risorse sul client, e di buerizzarla:
-si trasmette quindi soltanto avendo un certo numero di frame a disposizione.
+\begin{equation}
+T_L = T_{propagazione\:segnale} + T_{trasmissione} + T_{ritardo}
+\end{equation}
+Il tempo di trasmissione dipende dalla dimensione del messaggio e dalla banda disponibile, mentre il tempo di ritardo
+dipende dai tempi di accodamento che si vengono a vericare. In particolare, è quest'ultimo a tener da conto gli
+overhead presenti nel sistema (spesso è alto, e lo si può ridurre realizzando un buon protocollo).
+La qualità di servizio dipende da come si riescono a risolvere i colli di bottiglia dell'applicazione, cioè su cosa è
+orientata (trasmettere tanti dati di dimensioni molto limitate? Prevale il tempo di latenza. trasmettere diversi dati 
+di dimensioni elevate? E necessaria una banda sufficiente). Spesso, si utilizza come ulteriore indicatore il prodotto
+fra la latenza e la banda: riesce infatti a dare un'idea del ritardo fra mittente e ricevente, e di quante informazioni
+sono state inviate nel frattempo. Si rappresenta così il numero effettivo di bit trasmessi, perché non sarà mai uguale
+alla banda essendo presente proprio il tempo di latenza! Su questi indicatori, una prima possibile strategia molto
+semplice è quella di occupare sempre al massimo le pipe (e quindi la banda), per poter garantire i tempi di risposta
+concordati: tuttavia, si deve tener conto anche del tempo di latenza nel far ciò... Spesso quindi si incorpora un
+tempo per il buffering delle applicazioni. Un altro parametro è il jitter, ovvero la variazione della latenza che si
+presenta in un flusso: infatti, non è in realtà costante (sarebbe la situazione ideale...).
+Basti pensare per esempio che nella maggior parte delle comunicazioni vi sono degli intermediari a supporto: a seconda
+del carico di lavoro presente su di loro, il tempo di latenza può variare notevolmente! È quindi necessario pensare
+anche a una QoS distribuita fra i vari nodi!
+Lo skew rappresentalo sfasamento fra due flussi, che dovrebbero essere invece percepiti come una singola entità
+dall'utente finale (per esempio, discrepanze nella velocità fra audio e video).
+Spesso, in realtà, la QoS è un parametro che è trascurato in fase progettuale, nonostante sia un obiettivo. Questo
+perché durante lo sviluppo si hanno situazioni con traffico molto limitato. Ciò però non è vero per tutti i servizi
+(ad esempio, video streaming o qualunque altro FLusso di informazioni continuative): la QoS è fondamentale proprio per
+poter erogare il servizio, per cui i problemi della banda e della latenza son fondamentali. Per garantire la QoS, le
+entità devono effettuare una negoziazione per decidere certi parametri (il ritardo inziale per assorbire il jitter
+medio, il massimo ritardo accettabile per non dover scartare un pacchetto...). Per esempio, una prima idea per
+ottimizzare la trasmissione è quella di introdurre delle risorse sul client, e di bufferizzarla: si trasmette quindi
+soltanto avendo un certo numero di frame a disposizione.
 \subsection{QoS in Internet}
 Il mondo di Internet si basa sul protocollo TCP/IP, che lavora best effort: ciò
 signica che non può garantire QoS 6 . OSI è da sempre stato progettato con
@@ -172,7 +151,8 @@ standard per poter definire risorse e azioni, necessarie per la gestione. Le inf
 sono codicare utilizzando il CMIB,
 Common Management Information Base. OSI quindi sarebbe in grado, mediante queste informazioni, di poter gestire i
 singoli nodi di una rete (tipo, poter
-specificare la banda erogabile presente su un nodo9 , . . . ). OSI struttura il management con l'idea che vi siano manager
+specificare la banda erogabile presente su un nodo9 , . . . ). OSI struttura il management con l'idea che vi siano
+manager
 in grado di comunicare con gli agenti,i
 responsabili delle singole risorse: non vi è una specifica precisa, permettendo
 quindi di poter realizzare architetture più o meno complesse.
@@ -180,7 +160,8 @@ In realtà, il protocollo più diuso per la gestione di una rete è anche uno
 dei più semplici, detto Simple Network Management Protocol, sviluppato dall'Iu
 ETF, e per questo incompatibile con OSI : inizialmente non teneva conto della
 sicurezza, e si trattava di pura e semplice comunicazione.
-SNMP definisce (nella sua prima realizzazione) un unico manager centralizzato e diversi agenti non locali, quindi studiati
+SNMP definisce (nella sua prima realizzazione) un unico manager centralizzato e diversi agenti non locali, quindi
+studiati
 per un sistema distribuito. Il
 manager si preoccupa quindi di fare delle richieste sugli agenti, i quali devono
 rispondere, e possono anche avvisare di eventuali problemi/eventi mediante delle
@@ -413,7 +394,8 @@ frame, incapsulandoli in maniera opportuna. Proprio per questo motivo non
 la garantiscono ma sono solo di supporto! RTP per esempio si preoccupa di
 marcare ed ordinare i singoli frame, in maniera di mandarli in ordine13 , mentre
 RTCP gestisce la connessione astratta.
-RTP non definisce una sincronizzazione verso un tempo assoluto (nel distribuito questo ha dei costi improponibili), ma ha
+RTP non definisce una sincronizzazione verso un tempo assoluto (nel distribuito questo ha dei costi improponibili), ma
+ha
 l'obiettivo di minimizzare il
 jitter. Questi primi protocolli ragionano sul cammino attivo, per poter definire
 correttamente i nodi intermedi. Sono protocolli IETF, con sempre l'obiettivo di
@@ -426,7 +408,8 @@ disposizione solo meccanismi ma non politiche
 RTP è sempre accompagnato da RTCP. Il primo è un servizio fortemente
 erogato dal servitore verso il ricevente (da chi sa poco a chi sa molto), mentre
 il secondo serve per fornire al gestore informazioni di gestione, e quindi naviga
-in entrambe le direzioni. Tuttavia, si devono specificare in maniera precisa entrambi perché utilizzano le stesse risorse,
+in entrambe le direzioni. Tuttavia, si devono specificare in maniera precisa entrambi perché utilizzano le stesse
+risorse,
 e potrebbero aumentare l'intrusione;
 si stabilisce per esempio quale è la banda che RTCP può sfruttare. RTP in
 particolare consente ai singoli intermediari di intervenire sui singoli messaggi,
@@ -445,7 +428,7 @@ Questi protocolli purtroppo non sono molto scalabili, e possono essere usati
 solo in reti molto limitate. Il lettore RealPlayer per esempio sfrutta un altro
 protocollo detto Real Time Streaming Protocol, in cui non si definisce un cammino attivo, ma una volta ottenute le
 speciche dello stream, si utilizza UDP
-o TCP e un sistema di buering per poter trasferire il usso dalla sorgente al
+o TCP e un sistema di buffering per poter trasferire il usso dalla sorgente al
 player. Infatti, inizialmente si parte mediante TCP che riempe il buer, ma se
 un frame non arriva si sfrutta UDP proprio perché non garantisce che i messaggi
 `
@@ -453,7 +436,7 @@ arrivino in ordine! E un modello push, in cui le informazioni arrivano dal serve
 minimo, proprio perché non riserva nulla:
 `
 lavora solo sugli end-point. E sempre possibile comunque tornare a RSVP nel
-caso non fosse suciente.
+caso non fosse sufficiente.
 \subsection{Servizi differenziati, RFC 2474}
 L'approccio a servizi differenziati consiste nel cercare di fornire QoS non a livello
 applicativo, ma a livello di rete. Facendo ciò, in realtà, si ha che si sono definiti
