--- a/Sections/Comunicazione.tex
+++ b/Sections/Comunicazione.tex
@@ -369,7 +369,7 @@ per cui più partecipanti vorrebbero eseguire l'azione di recovery, ma deve esse
 che vi sia un time-out per cui scaduto, un processo può leggittimamente pensare che il nodo che aveva il token sia
 guasto.
 Questo processo allora crea un token d'elezione, che deve essere approvato da tutti i nodi perché diventi il nuovo 
-token dell'anello. Questo signica che però ogni nodo deve avere una conoscenza migliore dell'anello (per esempio, non
+token dell'anello. Questo significa che però ogni nodo deve avere una conoscenza migliore dell'anello (per esempio, non
 solo il prossimo ma anche il nodo ancora successivo, e così via). Se il token d'elezione giunge quindi di nuovo a chi
 lo ha generato, diviene il nuovo token\footnote{Se si fosse ripresentato il vecchio token, quello d’elezione sarebbe
 stato eliminato}. Visto che più processi possono mandare il token d'elezione, si ha che si decide in maniera
