--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -157,7 +157,7 @@ Vi sono due possibili modelli per la replicazione, e dipendono dal comportamento
 \subsection{Gestione delle risorse}
 La replicazione delle risorse è necessaria per un sistema distribuito, perché introducendola si può garantire la
 fruizione del servizio. In un progetto quindi si deve considerare come allocare le risorse sui vari nodi, e con che
-grado di replicazione: risorse replicate signica quindi che si hanno copie multiple delle risorse su nodi diversi!
+grado di replicazione: risorse replicate significa quindi che si hanno copie multiple delle risorse su nodi diversi!
 Maggiore è l'importanza della risorsa, maggiore deve essere il suo grado di replicazione.
 Si possono ipotizzare sempre due modelli base:
 \begin{itemize}
