--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -34,7 +34,7 @@ per poter definire dei WS.
 $\bullet$ UDDI : Universal Discovery Distribution Integration: questo invece è il
 protocollo che specifica come i servizi si possano raccogliere in appositi
 contenitori, realizzando un apposito sistema di nomi.
-I servizi sono definiti one-shot, il che signica che sono eseguiti in maniera unica,
+I servizi sono definiti one-shot, il che significa che sono eseguiti in maniera unica,
 isolata! Per ogni richiesta, si attiva un solo servizio. Siamo quindi in presenza
 di un mw senza stato. Questo è sempre dovuto al fatto che si deve lavorare con
 dati a grana molto grossa, che auto-contiene l'interazione: non si assume che il
