--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -199,7 +199,7 @@ most-once), però può anche essere molto limitante. Questo perché i client e
 i servant devono avere già deciso i proxy in maniera statica, e quindi anche i
 servizi! Tutto prima dell'esecuzione!
 Inizialmente si era introdotta anche un altra modalità, detta one-way, ma è
-deprecata (semantica best-eort, senza possibilità di introdurre QoS).
+deprecata (semantica best-effort, senza possibilità di introdurre QoS).
 29 Da ricordare che statico non significa che il client è legato allo specifico servant, ma che il
 contratto è deciso prima dell'esecuzione
 66
