--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -441,8 +441,8 @@ client e attivare (mediante i pattern descritti prima) i server necessari.
 $\bullet$ Life cycle manager : si tratta di un sistema per poter gestire la vita degli
 oggetti ad un livello superiore, applicativo proprio per la QoS (esempio:
 gestione dei nodi, per privilegiare certe entità rispetto ad altre, passivando
-server meno prioritari!) Si hanno quindi politiche denibili dierenziate!
-$\bullet$ Custom marshaller : è un sistema per fornire sistemi dierenziati per la
+server meno prioritari!) Si hanno quindi politiche denibili differenziate!
+$\bullet$ Custom marshaller : è un sistema per fornire sistemi differenziati per la
 presentazione dei dati (XML o formato binario: leggibilità o efficienza
 . . . ).
 $\bullet$ Sistema a plug-in: si tratta della possibilità di estendere il mw, introa
