--- a/Sections/Computazione.tex
+++ b/Sections/Computazione.tex
@@ -203,7 +203,7 @@ Gerlenter, con Linda, presenta due diversi modelli:
 $\bullet$ A ring: si partiziona lo spazio delle tuple, per cui ogni nodo conosce
 precedente e successivo: si ha una conoscenza locale, quindi limitata. Un
 produttore può fare una out su un qualsiasi nodo, e il messaggio fa un
-ciclo per vericare che non sia già presente su un qualche nodo. Lo stesso
+ciclo per verificare che non sia già presente su un qualche nodo. Lo stesso
 discorso vale per la in, che fa un giro no a trovare un messaggio che fa
 match. In Linda sono state considerate ovviamente delle problematiche
 di replicazione (il messaggio deve essere ripetuto? Ma quindi lo si deve
