--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -407,7 +407,7 @@ sono quindi dei meccanismi comuni nei mw per valutarne il tempo d'esistenza
 \subsection{I servizi addizionali}
 Si tratta di servizi che possono aiutare l'utente ad esprimere determinate operazioni. I servizi infatti possono
 dipendere dal contesto utilizzato, la sessione, o
-da una serie di eventi che si sono venuti a vericare.
+da una serie di eventi che si sono venuti a verificare.
 In particolare, l'Invocation Context è molto utile: in generale, infatti, i mw
 vengono sviluppati in maniera tale che l'utente non sia costretto a specificare
 nelle sue operazioni parametri di supporto, ma solo quelli necessari per la business logic. Però può capitare che in
