--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -289,8 +289,8 @@ enorme problema per la sicurezza (codice che naviga ed agisce in una rete. . . )
 potrebbe infatti avere del codice maligno che gira. Tuttavia, i controlli potrebbero anche impedire ad un nodo di
 eseguire codice non maligno, scartando
 90
-via l'agente! Si deve quindi vericare mediante l'uso di diversi agenti se per
-vericare il comportamento del nodo.
+via l'agente! Si deve quindi verificare mediante l'uso di diversi agenti se per
+verificare il comportamento del nodo.
 Un altro problema è sul fatto che il codice può essere letto senza problemi
 dal nodo su cui esegue: si devono quindi anche garantire certe proprietà di
 incapsulamento, perché non sia un nodo a modicare il codice contenuto da un
