--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -133,7 +133,7 @@ particolare, per aggiungere sicurezza si dovrebbe memorizzare e garantire il pub
 A tale proposito è stato pensato WSIL, dove si rovesciano le responsabilità:
 in questo modo è il provider a dover garantire sicurezza, e non è più compito di
 e u
-un eventuale server dei servizi vericare l'identità dei provider. Si tratta quindi
+un eventuale server dei servizi verificare l'identità dei provider. Si tratta quindi
 di un protocollo alternativo, in grado di realizzare un sistema decentralizzato,
 leggero e non focalizzato sul business. In maniera analoga ad UDDI, sfrutta
 WSDL per descrivere i servizi!
