--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -60,7 +60,7 @@ azione fra processi diversi, utilizzando come base i componenti e una comunicazi
 differenza con i precedenti modelli: nei
 sistemi precedenti la comunicazione si basava soprattutto sul modello ad eventi,
 che è molto lontano dalla comunicazione sincrona!
-Lo standard definisce delle speciche per cui i componenti siano in grado
+Lo standard definisce delle specifiche per cui i componenti siano in grado
 di comunicare fra di loro, in maniera indipendente dal linguaggio utilizzato e
 dalle applicazioni che li usano. L'idea è quella di introdurre una uniformità nel
 comportamento: dll, componenti su macchine diverse, . . . Si ottiene così omo\i{}
@@ -163,7 +163,7 @@ perenne dell'ORB
 75
 (in locale si lavorerebbe utilizzando la memoria comune!). Per definire questi
 componenti, si è sviluppato un apposito IDL, MIDL. Questo deriva e rispetta
-le speciche di DCE, ma risulta comunque essere incompatibile con altri IDL.
+le specifiche di DCE, ma risulta comunque essere incompatibile con altri IDL.
 Come funziona quindi la comunicazione in COM? Si lavora per sequenza: si
 tenta inizialmente di accedere alla risorsa in process, poi in locale, ed inne si
 tenta in remoto sfruttando come meccanismo RPC. In certi casi, essendo poco
