--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -3,7 +3,7 @@ CORBA è uno standard, specifica di un mw, nato dall'idea di mettere a dispoe
 sizione di 440 aziende una possibile soluzione per le loro esigenze!
 Essendo uno standard, quindi solo una specifica cartacea, si ha che esistono
 diverse implementazioni (IBM, Java, Orbix, Jacorb, . . . ), ma che rispettando le
-speciche possono anche essere interoperabili fra di loro!
+specifiche possono anche essere interoperabili fra di loro!
 Un mw deve avere oggetti remoti, invocabili da diversi client su diverse macchine: il sistema di supporto deve essere
 quindi in grado di ottenere tutti i servizi
 conosciuti da parte del client. Si ha quindi una forte idea di razionalizzazione,
@@ -21,7 +21,7 @@ un ORB saranno riconosciuti da un altro, magari introdotto in un secondo
 momento27
 CORBA è un mw maturo, che presenza diversi servizi: per esempio vi sono
 le common facilities, che sono dei servizi utili per poter aiutare tutte le possibili
-applicazioni, in grado di fornire risposte ad esigenze speciche. Corrisponde in
+applicazioni, in grado di fornire risposte ad esigenze specifiche. Corrisponde in
 tutto e per tutto al terzo livello dei mw.
 I servizi veramente importanti, necessari e presenti in ogni implementazione
 sono gli object (o CORBA) services, che permettono di fornire servizi utili per gli
