--- a/Sections/Replicazione.tex
+++ b/Sections/Replicazione.tex
@@ -75,7 +75,7 @@ oppurtune tecniche di replicazione spaziali e/o temporali:
 \end{itemize}
 Una singola macchina non basta per \textit{identificare e correggere} un guasto! La replicazione è fondamentale,
 almeno per fare monitoring (utilizzo di cluster per fare il controllo di una risorsa): si potrebbero utilizzare delle
-speciche parti per controllare e correggere l'architettura, ma è necessario rispettare sempre il principio della minima
+specifiche parti per controllare e correggere l'architettura, ma è necessario rispettare sempre il principio della minima
 intrusione: il rischio sarebbe che troppe risorse sono allocate solo per verificare che il sistema funzioni correttamente,
 riducendone l'efficienza! La replicazione è un costo che si va ad aggiungere al sistema: ma in generale si tratta di un
 costo sso, a fronte di possibili costi molto peggiori in caso di fallimento del sistema!
