--- a/Sections/COM.tex
+++ b/Sections/COM.tex
@@ -274,7 +274,7 @@ thread-safe (magari perché sono
 componenti legacy). Per superare questo problema, in DCOM si è introdote
 to il concetto di Apartment, che consiste ad un ambiente d'esecuzione isolato,
 cioè con una politica di threading ssata. Vi sono due diversi modelli, o quello
-single-threaded (più diuso, un unico componente lavora nell'apartment) opu
+single-threaded (più diffuso, un unico componente lavora nell'apartment) opu
 pure multi-threaded. Ogni componente può quindi avere più STA, ma sempre
 un solo MTA.
 \subsection{Altri strumenti DCOM}
