--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -280,7 +280,7 @@ particolare è che le politiche si possono combinare!
 Avendo a disposizione prima le interfacce, si possono implementare direttamente client e servant. Tuttavia, è mediante
 l'invocazione dinamica con cui
 si possono aggiungere nuovi servizi durante l'esecuzione. L'alternativa sarebbe
-dover spegnere il sistema, e ricongurare il tutto. La dinamicità si basa sull'uso
+dover spegnere il sistema, e riconfigurare il tutto. La dinamicità si basa sull'uso
 dell'IR, e permette di introdurre in CORBA altri modelli di comunicazione oltre
 al sincrono bloccante.
 Si vuole quindi chiedere o fornire un servizio senza avere il proxy/skeleton è già pronto. E un problema di tutti i mw.
