--- a/Sections/Middleware.tex
+++ b/Sections/Middleware.tex
@@ -280,7 +280,7 @@ la sopravvivvenza di questo al di fuori della durata dell'applicazione. Un
 esempio di singleton per esempio può essere il servizio di nomi: deve essere
 sempre presente, e possibilmente unico (o magari gerarchizzato in maniera
 `
-intelligente). E usato sicuramente per congurare certi oggetti complessi
+intelligente). E usato sicuramente per configurare certi oggetti complessi
 una volta sola.
 $\bullet$ Server Application: Come realizzare il deployment nel sistema? In che
 ordine attivare i servizi, e i vari servitori (sistema di nomi, come e quando
